# sdg-tag-heroes

./: .editorconfig  .gitignore  .gitlab-ci.yml  README.md  alembic.ini  docker-compose.yml  package.json  pnpm-lock.yaml  test_actions.txt  zen.py
alembic/: commands.md  env.py
api/: pyproject.toml
api/app/: main.py  messages.py  security.py
api/app/models/: query.py
api/app/routes/: annotations.py  authentication.py  authors.py  collections.py  dimensionality_reductions.py  profiles.py  publications.py  publications_2.py  publications_gpt.py  sdg_coin_wallets.py  sdg_explanations.py  sdg_label_decisions.py  sdg_label_histories.py  sdg_label_summaries.py  sdg_predictions.py  sdg_ranks.py  sdg_user_labels.py  sdg_xp_banks.py  sdgs.py  summaries.py  user_profiles_gpt.py  users.py  votes.py
backend/: manage.py  pyproject.toml  settings.py  urls.py
backend/accounts/: admin.py  apps.py  forms.py  serializers.py  signals.py  views.py
backend/accounts/management/commands/: drop_and_reset_django_tables.py  trunc_and_reset_django_tables.py
backend/accounts/migrations/: 0001_initial.py
backend/accounts/models/: __init__.py  admin.py  expert.py  labeler.py  user.py
db/: couchdb_connector.py  mariadb_connector.py  mongodb_connector.py  qdrantdb_connector.py  redisdb_connector.py
deploy/: api.Dockerfile  backend.Dockerfile  entrypoint.api.sh  entrypoint.backend.sh  entrypoint.frontend.sh  entrypoint.pipeline.sh  entrypoint.prefect.sh  frontend.Dockerfile  frontend.prod.Dockerfile  pipeline.Dockerfile  prefect.Dockerfile  utils.Dockerfile
docs/: db.md  django.md  docker.md  issues.md  mt-igcl.md  orm.md  python-env.md
dvdblk-shap-generator/: .gitignore  info.md
enums/: __init__.py  enums.py  enums.ts
env/: backend.env.example  couchdb.env.example  mariadb.env.example  mongo-express.env.example  mongodb.env.example  phpmyadmin.env.example  qdrantdb.env.example  redisdb.env.example  users.env.example
frontend/: .env.example  app.config.ts  app.vue  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend2/: app.config.ts  app.vue  package-lock.json  package.json
models/: __init__.py  achievement.py  admin.py  annotation.py  associations.py  author.py  base.py  collection.py  dim_red.py  expert.py  fact.py  faculty.py  inventor_achievement_association.py  inventory.py  inventory_achievement_association.py  labeler.py  publication.py  request.py  sdg_cluster.py  sdg_coin_wallet.py  sdg_coin_wallet_history.py  sdg_goal.py  sdg_label.py  sdg_label_decision.py  sdg_label_history.py  sdg_label_summary.py  sdg_prediction.py  sdg_ranks.py  sdg_target_prediction.py  sdg_user_label.py  sdg_xp_bank.py  sdg_xp_bank_history.py  summary.py  user.py  vote.py
models_old/: __init__.py  admin.py  division.py  expert.py  institute.py  labeler.py  publication.py  sdg_label.py  sdg_label_decision.py  sdg_label_history.py  sdg_target.py  sdg_user_label.py  user.py
notebooks/: model_comparison.ipynb  publication_comparison.ipynb  topic_data.json
pipeline/: generate_types.py  package.json  pnpm-lock.yaml  pyproject.toml
pipeline/app/: main.py
pipeline/aurora/: fine_tune.py
pipeline/prefect/: flow.py
pipeline/zora/: aurora-model-goal-only-links.csv  aurora-model-links.csv  aurora_model_loader.py  collector.py  embeddings.py  loader.py  predictor.py  predictor_bielik.py  predictor_dvdblk.py  reducer.py  target_predictor.py
prompts/: example_answer.json  example_prompt.json
queries/: __init__.py  queries.md
request_models/: __init__.py  annotations_gpt.py  authentication.py  collections.py  dimensionality_reductions.py  metrics_service.py  publication.py  publication_similarity_query_service.py  sdg_coin_wallet.py  sdg_prediction.py  sdg_rank.py  sdg_user_label.py  sdg_xp_bank.py  user_profiles_gpt.py  vote.py
requests_models/: __to_be_deleted.py  annotations_gpt.py  collections.py  metrics_service.py  notes2.py  publication_similarity_query_service.py  publications_gpt.py  sdg_prediction.py  sdg_xp_bank.py  user.py  user_profiles_gpt.py  vote.py
schemas/: __init__.py  achievement.py  annotation.py  annotations.py  authentication.py  author.py  collection.py  dimensionality_reduction.py  division.py  fact.py  faculty.py  gpt_assistant_service.py  institute.py  inventory.py  inventory_achievement_association.py  publication.py  schemas.md  sdg_coin_wallet.py  sdg_coin_wallet_history.py  sdg_explanations.py  sdg_goal.py  sdg_label_decision.py  sdg_label_history.py  sdg_label_summary.py  sdg_prediction.py  sdg_ranks.py  sdg_target.py  sdg_target_prediction.py  sdg_user_label.py  sdg_xp_bank.py  sdg_xp_bank_history.py  summary.py  vote.py
schemas2/: __init__.py  annotations.py  dimensionality_reduction.py  sdg_coin_wallet.py  sdg_explanations.py  sdg_label_decision.py  sdg_label_history.py  sdg_label_summary.py  sdg_prediction.py  sdg_xp_bank_history.py
services/: al_service.py  decision_service.py  gpt_explainer.py  label_service.py  math_service.py  metrics_service.py  publication_similarity_query_service.py  publication_summary.py  reward_service.py  scoring_service.py  sdg_predictor.py  similarity_query.py  umap_coordinates_generator.py  umap_coordinates_service.py  user_annotation_assessment.py  user_query_generator.py
settings/: enums.py  sdg_descriptions.py  sdg_seed_words.py  settings.py
types/: achievement.ts  collection.ts  publication.ts  sdgUserLabel.ts  sdgXpBank.ts  sdgXpBankHistory.ts
utils/: chatgpt_dataset_generation.py  chatgpt_dataset_generation_batchify.py  debug_mongo.py  logger.py  (+19 more)
(+441 files in other folders)
