[tool.poetry]
name = "mt-igcl-backend"
version = "0.1.0"
description = ""
authors = ["Nicolas Huber <nicolas.huber2@uzh.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
python-dotenv = "^1.0.1"
mysqlclient = "^2.2.4"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
pytz = "^2024.2"
pydantic-settings = "^2.5.2"
django-cors-headers = "^4.5.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
