[tool.poetry]
name = "mt-igcl-pipeline"
version = "0.1.0"
description = ""
authors = ["Nicolas Huber <nicolas.huber2@uzh.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"  # Restrict to Python 3.10.x
numpy = "<2.0"  # Restrict NumPy to version 1.x
pydantic = "^2.9.1"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.34"
mysql-connector-python = "^9.0.0"
qdrant-client = "^1.11.1"
pymongo = "^4.8.0"
torch = "2.1.1"
sentence-transformers = "^3.0.1"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
cloudant = "^2.15.0"
xmltodict = "^0.13.0"
pandas = "^2.2.2"
prefect = "<3.0"
nltk = "^3.9.1"
requests = "^2.32.3"
h5py = "^3.11.0"

# Platform-specific dependencies
tensorflow-macos = {version = "2.11.0", markers = "platform_system == 'Darwin'"}
tensorflow = {version = "2.11.0", markers = "sys_platform != 'darwin'"}  # TensorFlow for Windows and Linux
tensorflow-gpu = {version = "2.11.0", markers = "sys_platform != 'darwin'"}  # TensorFlow for Windows and Linux
peft = "^0.13.0"
umap-learn = "^0.5.6"
pydantic-settings = "^2.5.2"
redis = "^5.1.1"
datamapplot = "0.3.0"
bertopic = "^0.16.4"
passlib = "^1.7.4"
bcrypt = "^4.2.1"
seaborn = "^0.13.2"



[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
