[tool.poetry]
name = "mt-igcl-pipeline"
version = "0.1.0"
description = ""
authors = ["Nicolas Huber <nicolas.huber2@uzh.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"

# Core
pydantic = "^2.9.1"
pydantic-settings = "^2.5.2"
python-dotenv = "^1.0.1"
xmltodict = "^0.13.0"
loguru = "^0.7.3"

# API
uvicorn = "^0.30.6"
fastapi = "^0.114.0"

# API Helpers
bcrypt = "^4.2.1"
requests = "^2.32.3"
passlib = "^1.7.4"

# LLM
torch = "2.1.1"
sentence-transformers = "^3.0.1"
peft = "^0.13.0"

# Platform-specific dependencies
#tensorflow-macos = {version = "2.11.0", markers = "platform_system == 'Darwin'"}
#tensorflow = {version = "2.11.0", markers = "sys_platform != 'darwin'"}  # TensorFlow for Windows and Linux
#tensorflow-gpu = {version = "2.11.0", markers = "sys_platform != 'darwin'"}  # TensorFlow for Windows and Linux

# LLM Helpers
nltk = "^3.9.1"
h5py = "^3.11.0"

# ML
scikit-learn = "^1.6.0"
umap-learn = "^0.5.6"
bertopic = "^0.16.4"
datamapplot = "0.3.0"

# ML Helpers
numpy = "<2.0"  # Restrict NumPy to version 1.x
pandas = "^2.2.2"
seaborn = "^0.13.2"

# Databases
mysql-connector-python = "^9.0.0"
sqlalchemy = "^2.0.34"
qdrant-client = "^1.11.1"
pymongo = "^4.8.0"
redis = "^5.1.1"
cloudant = "^2.15.0"

# LLM clients
openai = "^1.57.0"

# Orchestrator
prefect = "<3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
